Fix overflow-y being hidden

--- a/app/assets/stylesheets/strips.scss
+++ b/app/assets/stylesheets/strips.scss
@@ -25,9 +25,11 @@ body {
   font-family: 'JollyGood Sans Basic', sans-serif;
   font-weight: normal;
   font-style: normal;
+  display: flex;
+  overflow-x: hidden;
+  justify-content: center;
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
 h1 {
   margin-bottom: 0;
